settings to local storage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,12 +15,9 @@
     },
     "default_popup": "popup.html"
   },
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
+  "permissions": [
+    "storage"
+  ],
   "content_scripts": [
     {
       "matches": [
