--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@types/chrome": "0.0.125",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@types/chrome": "0.0.125",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
@@ -34,8 +34,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
+    "got": "^11.8.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.3"
   }
 }
