--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "noImplicitAny": true,
         "module": "es6",
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "noImplicitThis": true,
         "strictNullChecks": true,
         "target": "es5",
