--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,12 @@
     },
     "default_popup": "popup.html"
   },
+  "applications": {
+    "gecko": {
+      "id": "me@stasn.ru",
+      "strict_min_version": "45.0"
+    }
+  },
   "permissions": [
     "storage",
     "tabs",
@@ -25,8 +31,9 @@
     "scripts": [
       "background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
+  "short_name": "VC bots",
   "content_scripts": [
     {
       "matches": [
