webpack configs & build script

--- a/manifests/firefox/manifest.json
+++ b/manifests/firefox/manifest.json
@@ -24,8 +24,7 @@
   "permissions": [
     "storage",
     "tabs",
-    "activeTab",
-    "webNavigation"
+    "activeTab"
   ],
   "background": {
     "scripts": [
