outside click behavior

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "chrome",
     "opera",
     "firefox",
-    "extention",
+    "safari",
+    "extension",
     "vc.ru",
     "vc bots finder"
   ],
