--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Web extension that shows account creation date and last comments for users of vc.ru, dtf.ru and tjournal.ru in the comments.",
   "scripts": {
-    "release-webkit": "webpack --mode=production --config ./webpack.config.webkit.js && node ./scripts/build-archive.js",
-    "release-firefox": "webpack --mode=production --config ./webpack.config.firefox.js && node ./scripts/build-archive.js"
+    "release-webkit": "webpack --mode=production --config ./webpack/webpack.config.webkit.js && node ./scripts/build-archive.js",
+    "release-firefox": "webpack --mode=production --config ./webpack/webpack.config.firefox.js && node ./scripts/build-archive.js"
   },
   "keywords": [
     "chrome",
